# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2

  18 Oct 2005; Roy Marples <uberlord@gentoo.org>:

    You can now specify a custom wpa_supplicant configuration file.
    wpa_supplicant now works on more than one interface.

  17 Oct 2005; Roy Marples <uberlord@gentoo.org>:

    wpa_supplicant now works on wired interfaces, and can work with
    ifplugd and netplug too.

  16 Oct 2005; Roy Marples <uberlord@gentoo.org>:

    Fixed typo in dhcpcd-wrapper so the new resolv.conf gets created
    in /var/lib/net-scripts and not the current directory. Thanks to
    Mark-Dominik Bürkle for the patch.

  13 Oct 2005; Roy Marples <uberlord@gentoo.org>:

    Fix test_service_state() so it always returns 1 when it's not in that
    state.

  12 Oct 2005; Roy Marples <uberlord@gentoo.org>:

    Changed number of preferred modules from 3 to 4 in net.lo, #108960.

* baselayout-1.12.0_pre9 (11 Oct 2005)

  11 Oct 2005; Roy Marples <uberlord@gentoo.org>:

    arping now dis-regards 0.0.0.0 and 0 addresses, #108737.

    dhcpcd now allows the user to configure the -c script option, #108345.

    bash doesn't handle floats, so we eumlate it. Fixes the issue
    where some daemons didn't stop, #107492. Thanks to Giampaolo Tomassoni.

  09 Oct 2005; Roy Marples <uberlord@gentoo.org>:

    Fix chroot handling and enable custom env vars for start-stop-daemon
    binary #101642, thanks to Quequero. 

  07 Oct 2005; Roy Marples <uberlord@gentoo.org>:

    Fix some vlan/bridge/tap/neplugd/ifplugd interdependencies #107406.   

  06 Oct 2005; Roy Marples <uberlord@gentoo.org>:

    Fixup IPv6 documentation and support, #108143.

  16 Sep 2005; Roy Marples <uberlord@gentoo.org>:

    iwconfig and wpa_supplicant now check to see if /proc/net/wireless exists
    before checking for extensions, #106036

  14 Sep 2005; Roy Marples <uberlord@gentoo.org>:

    netplug module renamed to netplugd for consistency
